# sqim-protocol

./: .env.testnet.example  .gitattributes  .gitignore  Cargo.toml  DEPLOYMENTS.md  DEPLOYMENTS_HISTORY.md  FUTURE.md  POOLS.md  PRODUCTION_READINESS.md  README.md  SMOKE_TEST_REPORT.md  THREATS.md  docker-compose.yml  package.json  vercel.json
app/: .env.example  README.md  (+4 more)
contracts/basket/: Cargo.toml
contracts/basket/src/: lib.rs
contracts/basket/test_snapshots/test/: basket_token_transfers_to_third_party_outside_protocol.1.json  first_deposit_mints_at_initial_nav.1.json  full_withdrawal_closes_position.1.json  max_transaction_size_blocks_large_deposit.1.json  max_transaction_size_blocks_large_rebalance.1.json  max_transaction_size_blocks_large_withdrawal.1.json  partial_withdrawal_charges_fee_only_on_profit.1.json  pause_halts_deposit.1.json  pause_halts_rebalance.1.json  rebalance_fails_if_caller_is_not_creator_or_authorized.1.json  rebalance_fails_if_drift_exceeds_bound_even_with_valid_signers.1.json  rebalance_shifts_weights_without_changing_supply.1.json  rebalance_swap_fails_if_slippage_exceeds_tolerance.1.json  rebalancer_set_change_executes_only_after_timelock.1.json  second_deposit_at_different_nav_mints_fewer_shares_and_reweights_basis.1.json  swap_fails_if_slippage_exceeds_tolerance.1.json  unauthorized_withdrawal_attempt_fails.1.json  withdraw_swap_fails_if_slippage_exceeds_tolerance.1.json  withdrawal_at_loss_has_zero_fee.1.json  withdrawal_fee_change_cannot_execute_before_timelock.1.json  withdrawal_fee_change_executes_after_timelock.1.json
(+92 files in other folders)
