[workspace]
members = [
    "contracts/basket",
    "contracts/basket_token",
    "contracts/factory",
    "contracts/oracle_adapter",
    "contracts/settlement",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sqim/sqim"

[workspace.dependencies]
soroban-sdk = "27.0.0"

[profile.release]
overflow-checks = true
