[package]
name = "basket"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk.workspace = true

[dev-dependencies]
basket_token = { path = "../basket_token" }
oracle_adapter = { path = "../oracle_adapter" }
settlement = { path = "../settlement" }
soroban-sdk = { workspace = true, features = ["testutils"] }
